remove split by comma in read orders